# git-warden

./: .git-warden.example.yml  .git-warden.yml  .gitignore  AGENTS.md  Cargo.toml  GitVersion.yml  LICENSE  README.en.md  README.ja.md  README.ko.md  README.md  README.zh.md  cliff.toml  justfile  lefthook.yml  release.toml
.github/: renovate.json
.github/workflows/: ci.yml  release-draft.yml  release-publish.yml  release.yml
crates/cc-cachedir/: Cargo.toml
crates/cc-cachedir/src/: lib.rs
crates/cc-charset/: Cargo.toml
crates/cc-checker/: Cargo.toml
crates/cc-checker/src/: append_only.rs  binary.rs  cache_dir.rs  conventional.rs  custom.rs  diff_check.rs  editorconfig_check.rs  encoding_check.rs  fix.rs  lib.rs  lint_check.rs  msg.rs  protected.rs  run.rs  staged.rs  unicode_check.rs
crates/cc-checker/tests/: checker_unit.rs  integration.rs
crates/cc-comment/: Cargo.toml
crates/cc-comment/examples/: godump.rs
crates/cc-comment/src/: cstyle.rs  hash.rs  hcl.rs
crates/cc-comment/testdata/: sample.cpp  sample.cs  sample.swift
crates/cc-comment/tests/: parsers.rs
crates/cc-config/: Cargo.toml
crates/cc-config/src/: accessors.rs  cache.rs  defaults.rs  error.rs  include.rs  loader.rs  schema.rs  schema_check.rs
crates/cc-config/testdata/schema/: current.yml  v1_0_0.yml  v1_0_0_migrated.yml  v1_1_0.yml
crates/cc-directive/: Cargo.toml
crates/cc-directive/src/: lib.rs
crates/cc-editorconfig/: Cargo.toml
crates/cc-emoji/: Cargo.toml
crates/cc-emoji/src/: lib.rs
crates/cc-encoding/: Cargo.toml
crates/cc-gitdiff/: Cargo.toml
crates/cc-gitdiff/tests/: gitops.rs
crates/cc-i18n/: Cargo.toml
crates/cc-i18n/locales/: ja.yml  ko.yml  zh.yml
crates/cc-i18n/src/: lib.rs
crates/cc-langdetect/: Cargo.toml
crates/cc-langdetect/src/: lib.rs
crates/cc-lint/: Cargo.toml
crates/cc-logger/: Cargo.toml
crates/cc-pathutil/: Cargo.toml
crates/cc-progress/: Cargo.toml
crates/cc-progress/src/: lib.rs  tui.rs
crates/cc-version/: Cargo.toml
crates/git-warden/: Cargo.toml
crates/git-warden-cachedir/: Cargo.toml
crates/git-warden-charset/: Cargo.toml
crates/git-warden-charset/src/: ambiguous.rs  ambiguous_gen.rs
crates/git-warden-checker/: Cargo.toml
crates/git-warden-checker/src/: append_only.rs  binary.rs  cache_dir.rs  conventional.rs  custom.rs  diff_check.rs  editorconfig_check.rs  encoding_check.rs  fix.rs  lib.rs  lint_check.rs  msg.rs  protected.rs  run.rs  staged.rs  unicode_check.rs
crates/git-warden-checker/tests/: checker_unit.rs  integration.rs
crates/git-warden-comment/: Cargo.toml
crates/git-warden-comment/examples/: godump.rs
crates/git-warden-comment/src/: dockerfile.rs  go.rs  html.rs  markdown.rs  python.rs  registry.rs
crates/git-warden-comment/testdata/: sample.c  sample.java  sample.kt  sample.rs  sample.ts
crates/git-warden-comment/tests/: parsers.rs
crates/git-warden-config/: Cargo.toml
crates/git-warden-config/src/: accessors.rs  allowed_words.rs  defaults.rs  error.rs  include.rs  lib.rs  loader.rs  merge.rs  schema_check.rs  validate.rs
crates/git-warden-config/testdata/schema/: v1_1_0_migrated.yml
crates/git-warden-core/: .git-warden.schema.json  Cargo.toml
crates/git-warden-core/locales/: en.yml  ja.yml  ko.yml  zh.yml
crates/git-warden-core/src/: lib.rs
crates/git-warden-core/src/charset/: ambiguous.rs  invisible.rs  mod.rs
crates/git-warden-core/src/checker/: append_only.rs  binary.rs  cache_dir.rs  conventional.rs  custom.rs  diff_check.rs  editorconfig_check.rs  encoding_check.rs  fix.rs  lint_check.rs  mod.rs  msg.rs  protected.rs  run.rs  staged.rs  unicode_check.rs
crates/git-warden-core/src/comment/: cstyle.rs  dockerfile.rs  go.rs  hash.rs  hcl.rs  html.rs  markdown.rs  mod.rs  python.rs  registry.rs
crates/git-warden-core/src/config/: accessors.rs  allowed_words.rs  cache.rs  defaults.rs  error.rs  include.rs  loader.rs  merge.rs  schema_check.rs  types.rs  validate.rs
crates/git-warden-core/src/directive/: mod.rs
crates/git-warden-core/src/i18n/: mod.rs
crates/git-warden-core/src/langdetect/: mod.rs
crates/git-warden-core/src/lint/: mod.rs
crates/git-warden-core/src/logger/: mod.rs
crates/git-warden-core/src/pathutil/: mod.rs
crates/git-warden-core/testdata/: Dockerfile  sample.go  sample.js  sample.md  sample.py  sample.tf
crates/git-warden-core/testdata/schema/: v1_0_1.yml  v1_0_1_migrated.yml  v1_0_2.yml  v1_0_2_migrated.yml
crates/git-warden-directive/: Cargo.toml
crates/git-warden-directive/src/: lib.rs
crates/git-warden-editorconfig/: Cargo.toml
crates/git-warden-editorconfig/src/: lib.rs
crates/git-warden-emoji/: Cargo.toml
crates/git-warden-encoding/: Cargo.toml
crates/git-warden-encoding/src/: lib.rs
crates/git-warden-gitdiff/: Cargo.toml
crates/git-warden-gitdiff/src/: lib.rs
crates/git-warden-gitdiff/tests/: gitops.rs
crates/git-warden-i18n/: Cargo.toml
crates/git-warden-i18n/src/: lib.rs
crates/git-warden-langdetect/: Cargo.toml
crates/git-warden-lint/: Cargo.toml
crates/git-warden-logger/: Cargo.toml
crates/git-warden-pathutil/: Cargo.toml
crates/git-warden-progress/: Cargo.toml
crates/git-warden-version/: Cargo.toml  build.rs
crates/git-warden-version/src/: lib.rs
crates/git-warden/src/: commands.rs  extra.rs  main.rs  output.rs  steps.rs
crates/git-warden/templates/: config.yml.tmpl
crates/git-warden/tests/: e2e.rs
crates/git-warden/tests/fixtures/: empty.gitconfig
