[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/zcube/git-warden"
authors = ["zcube <zcubekr@gmail.com>"]

[workspace.dependencies]
# internal crates
cc-i18n = { path = "crates/cc-i18n" }
cc-version = { path = "crates/cc-version" }
cc-logger = { path = "crates/cc-logger" }
cc-pathutil = { path = "crates/cc-pathutil" }
cc-charset = { path = "crates/cc-charset" }
cc-emoji = { path = "crates/cc-emoji" }
cc-langdetect = { path = "crates/cc-langdetect" }
cc-encoding = { path = "crates/cc-encoding" }
cc-directive = { path = "crates/cc-directive" }
cc-comment = { path = "crates/cc-comment" }
cc-gitdiff = { path = "crates/cc-gitdiff" }
cc-lint = { path = "crates/cc-lint" }
cc-editorconfig = { path = "crates/cc-editorconfig" }
cc-cachedir = { path = "crates/cc-cachedir" }
cc-config = { path = "crates/cc-config" }
cc-checker = { path = "crates/cc-checker" }
cc-progress = { path = "crates/cc-progress" }

# external crates
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "1"
json5 = "1.0"
quick-xml = "0.40"
regex = "1"
rust-i18n = "4"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
encoding_rs = "0.8"
chardetng = "1"
infer = "0.19"
goblin = "0.10"
ec4rs = "1"
dirs = "6"
ureq = "3"
sha2 = "0.11"
rayon = "1"
once_cell = "1"
pulldown-cmark = "0.13"
glob = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
