[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/zcube/git-warden"
authors = ["zcube <zcubekr@gmail.com>"]

[workspace.dependencies]
# internal crates
git-warden-i18n = { path = "crates/git-warden-i18n" }
git-warden-version = { path = "crates/git-warden-version" }
git-warden-logger = { path = "crates/git-warden-logger" }
git-warden-pathutil = { path = "crates/git-warden-pathutil" }
git-warden-charset = { path = "crates/git-warden-charset" }
git-warden-emoji = { path = "crates/git-warden-emoji" }
git-warden-langdetect = { path = "crates/git-warden-langdetect" }
git-warden-encoding = { path = "crates/git-warden-encoding" }
git-warden-directive = { path = "crates/git-warden-directive" }
git-warden-comment = { path = "crates/git-warden-comment" }
git-warden-gitdiff = { path = "crates/git-warden-gitdiff" }
git-warden-lint = { path = "crates/git-warden-lint" }
git-warden-editorconfig = { path = "crates/git-warden-editorconfig" }
git-warden-cachedir = { path = "crates/git-warden-cachedir" }
git-warden-config = { path = "crates/git-warden-config" }
git-warden-checker = { path = "crates/git-warden-checker" }
git-warden-progress = { path = "crates/git-warden-progress" }

# external crates
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "1"
json5 = "1.0"
quick-xml = "0.40"
regex = "1"
rust-i18n = "4"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
encoding_rs = "0.8"
chardetng = "1"
infer = "0.19"
goblin = "0.10"
ec4rs = "1"
dirs = "6"
ureq = "3"
sha2 = "0.11"
rayon = "1"
once_cell = "1"
pulldown-cmark = "0.13"
glob = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
