[workspace]
resolver = "2"
members = ["crates/git-warden", "crates/git-warden-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/zcube/git-warden"
authors = ["zcube <zcubekr@gmail.com>"]

[workspace.dependencies]
# internal crates
git-warden-core = { path = "crates/git-warden-core", version = "0.1.0" }

# external crates
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "1"
json5 = "1.0"
quick-xml = "0.40"
regex = "1"
rust-i18n = "4"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
encoding_rs = "0.8"
chardetng = "1"
infer = "0.19"
goblin = "0.10"
ec4rs = "1"
dirs = "6"
ureq = "3"
sha2 = "0.11"
rayon = "1"
once_cell = "1"
pulldown-cmark = "0.13"
glob = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
