[package]
name = "cc-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cc-i18n.workspace = true
cc-logger.workspace = true
cc-pathutil.workspace = true
cc-langdetect.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
jsonschema = "0.46"
once_cell.workspace = true
dirs.workspace = true
ureq.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
