[package]
name = "git-warden-checker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core commit message and diff policy checker for git-warden"

[dependencies]
git-warden-config.workspace = true
git-warden-comment.workspace = true
git-warden-charset.workspace = true
git-warden-encoding.workspace = true
git-warden-langdetect.workspace = true
git-warden-gitdiff.workspace = true
git-warden-emoji.workspace = true
git-warden-lint.workspace = true
git-warden-editorconfig.workspace = true
git-warden-pathutil.workspace = true
git-warden-directive.workspace = true
git-warden-cachedir.workspace = true
git-warden-i18n.workspace = true
git-warden-logger.workspace = true
regex.workspace = true
once_cell.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile = "3"
