[package]
name = "git-warden-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration loading and schema for git-warden"

[dependencies]
git-warden-i18n.workspace = true
git-warden-logger.workspace = true
git-warden-pathutil.workspace = true
git-warden-langdetect.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
jsonschema = "0.46"
once_cell.workspace = true
dirs.workspace = true
ureq.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
