[package]
name = "git-warden-directive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Inline warden directive parsing for git-warden"

[dependencies]
git-warden-comment.workspace = true
git-warden-langdetect.workspace = true
