[package]
name = "git-warden-editorconfig"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "EditorConfig compliance checking for git-warden"

[dependencies]
ec4rs.workspace = true

[dev-dependencies]
tempfile = "3"
