[package]
name = "git-warden-encoding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "File encoding detection for git-warden"

[dependencies]
chardetng.workspace = true
encoding_rs.workspace = true
infer.workspace = true
