[package]
name = "git-warden-gitdiff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Git diff parsing utilities for git-warden"

[dependencies]
once_cell.workspace = true

[dev-dependencies]
tempfile = "3"
