[package]
name = "git-warden-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Data file linting (YAML, JSON, XML, TOML) for git-warden"

[dependencies]
serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true
quick-xml.workspace = true
serde.workspace = true
