[package]
name = "git-warden-progress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Progress display and reporting for git-warden"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
