[package]
name = "git-warden"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool that automatically checks Git commit messages and source code policies"
keywords = ["commit", "pre-commit", "hook", "git"]
build = "build.rs"

[[bin]]
name = "git-warden"
path = "src/main.rs"

[dependencies]
git-warden-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
